--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,9 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    //selenide
+    testCompile 'com.codeborne:selenide:5.17.4'
+    compile group: 'com.codeborne', name: 'selenide', version: '5.16.2'
 }
 
